--- a/force-app/main/default/classes/Accountapexclass.cls
+++ b/force-app/main/default/classes/Accountapexclass.cls
@@ -6,6 +6,8 @@ public decimal annualrevenue=78000;
 public date SLAexpirationdate=system.today()-20;
     public Accountapexclass(){
       // adding comment to test repository
+      //adding comment to Developer repository
+      
         
         string industry='banking';
        system.debug('accountname....'+ accountname);
